--- a/blog_photos_copy/index.ejs
+++ b/blog_photos_copy/index.ejs
@@ -11,7 +11,7 @@ comments: "false"
 	<a class="photos-btn" href="#">Video</a>
 </div>
 <div class="instagram itemscope">
-	<a href="https://janche.github.io/" target="_blank" class="open-ins">图片正在加载中…</a>
+	<a href="https://Zhanf-feilong.github.io/" target="_blank" class="open-ins">图片正在加载中…</a>
 </div>
 <script>
   (function() {
